[iOS] presentingApplicationBundleIdentifier is wrong in new web processes created after presentingApplicationAuditToken changes https://bugs.webkit.org/show_bug.cgi?id=286993 rdar://142576989
Reviewed by Eric Carlson.

WebProcessCreationParameters::presentingApplicationBundleIdentifier was calculated based on the
APIProcessPoolConfiguration's audit token, but this audit token may be invalid if the presenting
process' PID changed. This results in the web process being created with the UI process' bundle
identifier rather than the presenting process'.

Resolved this by calculating presentingApplicationBundleIdentifier based on the WebPageProxy's
presentingApplicationAuditToken, which always represents the current instance of the presenting
application. Since presentingApplicationBundleIdentifier is now per-Page, removed the global
WTF::presentingApplicationBundleIdentifier.

Since Now Playing suppression is based on the presentingApplicationBundleIdentifier, called
PlatformMediaSessionManager::updateNowPlayingInfoIfNecessary when the value changes.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.mm:
(WTF::presentingApplicationBundleIdentifierStorage): Deleted.
(WTF::setPresentingApplicationBundleIdentifier): Deleted.
(WTF::presentingApplicationBundleIdentifier): Deleted.
* Source/WebCore/html/MediaElementSession.cpp:
(WebCore::MediaElementSession::computeNowPlayingInfo const):
* Source/WebCore/page/Page.cpp:
(WebCore::m_presentingApplicationBundleIdentifier):
(WebCore::m_presentingApplicationAuditToken): Deleted.
* Source/WebCore/page/Page.h:
* Source/WebCore/page/PageConfiguration.h:
* Source/WebCore/page/cocoa/PageCocoa.mm:
(WebCore::Page::presentingApplicationBundleIdentifier const):
(WebCore::Page::setPresentingApplicationBundleIdentifier):
* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
* Source/WebKit/Shared/WebProcessCreationParam

--- a/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
@@ -274,6 +274,10 @@ enum class WebCore::UserInterfaceLayoutDirection : bool;
 #if HAVE(AUDIT_TOKEN)
     std::optional<WebKit::CoreIPCAuditToken> presentingApplicationAuditToken;
 #endif
+
+#if PLATFORM(COCOA)
+    String presentingApplicationBundleIdentifier;
+#endif
 }
 
 [Nested] struct WebKit::RemotePageParameters {
