[Site Isolation] ProvisionalPageProxy should not reuse the main frame when its process does not already have a RemotePageProxy https://bugs.webkit.org/show_bug.cgi?id=287005 rdar://144148232
Reviewed by Alex Christensen.

This removes another scenario where a main frame was unnecessarily being reused after a cross-site
navigation. This is needed to enable the back/forward cache.

Now, when a ProvisionalPageProxy is created, the creation of RemotePageProxy for the new process is
delayed until we know that one does not already exist. Previously, creating a FrameProcess would always
also create a RemotePageProxy for the new process, so one was always available to take in
ProvisionalPageProxy::initializeWebPage. With this change, if no existing RemotePageProxy is found, the
main frame created by the ProvisionalPageProxy is used instead.

No change in behavior.

* Source/WebKit/Shared/ProvisionalFrameCreationParameters.h:
* Source/WebKit/Shared/ProvisionalFrameCreationParameters.serialization.in:
* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
Since the provisional main frame needs to be created at the same as page creation, add a new member to
WebPageCreationParameters instead of sending two IPC messages.

* Source/WebKit/UIProcess/BrowsingContextGroup.cpp:
(WebKit::BrowsingContextGroup::addFrameProcess):
(WebKit::BrowsingContextGroup::addFrameProcessAndInjectPageContextIf):
* Source/WebKit/UIProcess/BrowsingContextGroup.h:
* Source/WebKit/UIProcess/FrameProcess.cpp:
(WebKit::FrameProcess::FrameProcess):
* Source/WebKit/UIProcess/ProvisionalFrameProxy.cpp:
(WebKit::ProvisionalFrameProxy::ProvisionalFrameProxy):
* Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
(WebKit::ProvisionalPageProxy::initializeWebPage):
* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::prepareForProvisionalLoadInProcess):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::initializeWebPage)

--- a/Source/WebKit/Shared/ProvisionalFrameCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/ProvisionalFrameCreationParameters.serialization.in
@@ -21,6 +21,7 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 struct WebKit::ProvisionalFrameCreationParameters {
+    WebCore::FrameIdentifier frameID;
     std::optional<WebCore::LayerHostingContextIdentifier> layerHostingContextIdentifier;
     WebCore::SandboxFlags effectiveSandboxFlags;
     WebCore::ScrollbarMode scrollingMode;
