Re-enable requestIdleCallback on Apple ports https://bugs.webkit.org/show_bug.cgi?id=285049
Reviewed by Chris Dumez.

Re-enabled the feature on Apple ports now that various regressions have been fixed.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/289832@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6086,7 +6086,7 @@ ReplayCGDisplayListsIntoBackingStore:
 
 RequestIdleCallbackEnabled:
   type: bool
-  status: testable
+  status: stable
   category: dom
   humanReadableName: "requestIdleCallback"
   humanReadableDescription: "Enable requestIdleCallback support"
@@ -6094,6 +6094,7 @@ RequestIdleCallbackEnabled:
     WebKitLegacy:
       default: false
     WebKit:
+      "USE(CF)": true
       default: false
     WebCore:
       default: false
