[Model Element] Move the portal to the UI process https://bugs.webkit.org/show_bug.cgi?id=287000 rdar://144069542
Reviewed by Mike Wyrzykowski.

By moving the portal entity and the model container entity to the UI
process, the Model process will need to host just the model entity.
This hierarchy change is needed for fixing the model drag preview
in a future patch, where we can pass the _UIRemoteView hosting just
the model (without the portal) to create a UITargetedDragPreview.

This fix changes WKPageHostedModelView such that its layer is now
the separated layer with an entity that represents the portal.
The container entity in the model process that had clipping
enabled has also been moved to WKPageHostedModelView in the UI
process. The container UIView is a subview of WKPageHostedModelView.

This also means we need to handle updates to the background color
and noportal attribute in WKPageHostedModelView. The ModelContext
has been extended to include the background color, whether portal
should be disabled, and the bounds of the element.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::modelContext const):
Fill in the new data members.
(WebCore::HTMLModelElement::updateHasPortal):
Update the renderer so the WKPageHostedModelView can be updated
with the new noportal attribute value.
(WebCore::HTMLModelElement::applyBackgroundColor): Deleted.
* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/Modules/model-element/ModelPlayer.cpp:
(WebCore::ModelPlayer::setBackgroundColor): Deleted.
* Source/WebCore/Modules/model-element/ModelPlayer.h:
* Source/WebCore/platform/graphics/ModelContext.cpp:
(WebCore::ModelContext::create):
(WebCore::ModelContext::ModelContext):
* Source/WebCore/platform/graphics/ModelContext.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateConfiguration):
Set the current background color on the ModelContext before passing it to
m_graphicsLayer.
* So

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -7053,9 +7053,14 @@ struct WebCore::CookieChangeSubscription {
 }
 
 #if ENABLE(MODEL_PROCESS)
+enum class WebCore::ModelContextDisablePortal : bool
+
 [RefCounted] class WebCore::ModelContext {
     WebCore::PlatformLayerIdentifier modelLayerIdentifier()
     WebCore::LayerHostingContextIdentifier modelContentsLayerHostingContextIdentifier()
+    WebCore::LayoutSize modelLayoutSize()
+    WebCore::ModelContextDisablePortal disablePortal()
+    std::optional<WebCore::Color> backgroundColor()
 };
 #endif
 
