[macOS] Remove sandbox extension to com.apple.CARenderServer in the WebContent process https://bugs.webkit.org/show_bug.cgi?id=287024 rdar://135814082
Reviewed by Sihui Liu.

It should not be possible for the WebContent process to consume a sandbox extension to CARenderServer if in Lockdown Mode or
if both IOKit is blocked and Unified PDF is enabled.

* Source/WebKit/Scripts/process-entitlements.sh:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::m_textAnimationController):
* Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

Canonical link: https://commits.webkit.org/289914@main

--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -1122,7 +1122,12 @@
 
 ; Needed for [CAContext remoteContextWithOptions]
 #if HAVE(SANDBOX_STATE_FLAGS) && PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 140000
-(with-filter (require-not (lockdown-mode))
+(with-filter
+    (require-all
+        (require-not (lockdown-mode))
+        (require-any
+            (require-not (state-flag "UnifiedPDFEnabled"))
+            (require-not (state-flag "BlockIOKitInWebContentSandbox"))))
     (allow mach-lookup
         (require-all
             (extension "com.apple.webkit.extension.mach")
