Add service worker InstallEvent skeleton rdar://144076933 https://bugs.webkit.org/show_bug.cgi?id=286911
Reviewed by Brady Eidson.

We add a feature flag and expose InstallEvent based on it.
When flag is off, we use ExtendableEvent.

We do not implement yet InstallEvent::addRoutes, this will be for a future patch.

* LayoutTests/imported/w3c/web-platform-tests/service-workers/idlharness.https.any.serviceworker-expected.txt:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Headers.cmake:
* Source/WebCore/Modules/url-pattern/URLPattern.cpp:
(WebCore::URLPattern::create):
* Source/WebCore/Modules/url-pattern/URLPattern.h:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:
* Source/WebCore/dom/EventInterfaces.in:
* Source/WebCore/workers/service/InstallEvent.cpp: Added.
(WebCore::InstallEvent::InstallEvent):
(WebCore::InstallEvent::addRoutes):
* Source/WebCore/workers/service/InstallEvent.h: Added.
* Source/WebCore/workers/service/InstallEvent.idl: Added.
* Source/WebCore/workers/service/RouterCondition.h: Added.
(WebCore::RouterNotCondition::value const):
(WebCore::RouterNotCondition::value):
(WebCore::RouterNotCondition::RouterNotCondition):
* Source/WebCore/workers/service/RouterCondition.idl: Added.
* Source/WebCore/workers/service/RouterRule.h: Added.
* Source/WebCore/workers/service/RouterRule.idl: Added.
* Source/WebCore/workers/service/RouterSourceDict.h: Added.
(WebCore::RouterSourceDict::isolatedCopy):
* Source/WebCore/workers/service/RouterSourceDict.idl: Added.
* Source/WebCore/workers/service/RouterSourceEnum.h: Added.
* Source/WebCore/workers/service/RouterSourceEnum.idl: Added.
* Source/WebCore/workers/service/RunningStatus.h: Added.
* Source/WebCore/workers/service/RunningSta

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -6678,6 +6678,20 @@ ServiceWorkerEntitlementDisabledForTesting:
     WebKit:
       default: false
 
+ServiceWorkerInstallEventEnabled:
+  type: bool
+  status: testable
+  category: networking
+  humanReadableName: "Service Worker Install Event"
+  humanReadableDescription: "Enable Service Worker Install Event API"
+  defaultValue:
+    WebKit:
+      default: false
+    WebKitLegacy:
+      default: false
+    WebCore:
+      default: false
+
 ServiceWorkerNavigationPreloadEnabled:
   type: bool
   status: stable
