[WPE] Test external module loading and WPE Display https://bugs.webkit.org/show_bug.cgi?id=286919
Reviewed by Carlos Garcia Campos and Adrian Perez de Castro.

Add a mock WPE platform that is absolutely barebones, and just returns
stub values for everything. It doesn't create views nor any other
platform object.

The mock platform exercises WPE's external module loading, with a
dynamic type registered at module loading time. It also has a higher
priority than regular WPE modules.

The new TestDisplay file only has a single test, that checks if
wpe_display_get_default() is able to properly find the mock platform
and load it as expected. It checks the resulting type name.

Further tests can be added by making the mock platform configurable.

* Tools/TestWebKitAPI/PlatformWPE.cmake:
* Tools/TestWebKitAPI/Tests/WPEPlatform/TestDisplay.cpp: Added.
(testLoadExternalDisplay):
(beforeAll):
(afterAll):
* Tools/TestWebKitAPI/glib/CMakeLists.txt:
* Tools/TestWebKitAPI/glib/WebKitGLib/TestMain.cpp:
(main):
* Tools/TestWebKitAPI/wpe/mock-platform/CMakeLists.txt: Added.
* Tools/TestWebKitAPI/wpe/mock-platform/WPEDisplayMock.cpp: Added.
(wpeDisplayMockDispose):
(wpeDisplayMockConnect):
(wpeDisplayMockCreateView):
(wpeDisplayMockCreateInputMethodContext):
(wpeDisplayMockGetEGLDisplay):
(wpeDisplayMockGetKeymap):
(wpeDisplayMockGetPreferredDMABufFormats):
(wpeDisplayMockGetNScreens):
(wpeDisplayMockGetScreen):
(wpeDisplayMockGetDRMDevice):
(wpeDisplayMockGetDRMRenderNode):
(wpeDisplayMockUseExplicitSync):
(wpe_display_mock_class_init):
(wpe_display_mock_class_finalize):
(wpe_display_mock_init):
(g_io_module_load):
(g_io_module_unload):
* Tools/TestWebKitAPI/wpe/mock-platform/WPEDisplayMock.h: Added.

Canonical link: https://commits.webkit.org/289925@main

--- a/Tools/TestWebKitAPI/glib/CMakeLists.txt
+++ b/Tools/TestWebKitAPI/glib/CMakeLists.txt
@@ -111,6 +111,7 @@ set(WebKitGLibAPITests_DEFINITIONS
     WEBKIT_INJECTED_BUNDLE_PATH="${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
     WEBKIT_INSPECTOR_RESOURCES_PATH="${CMAKE_BINARY_DIR}/share"
     WEBKIT_TEST_RESOURCES_DIR="${TEST_RESOURCES_DIR}"
+    WPE_MOCK_PLATFORM_DIR="${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/wpe-mock-platform"
 )
 
 add_library(WebKitGLibAPITestsCore STATIC ${WebKitGLibAPITests_SOURCES})
@@ -143,6 +144,24 @@ if (ENABLE_WPE_PLATFORM)
     if (COMPILER_IS_GCC_OR_CLANG)
         WEBKIT_ADD_TARGET_CXX_FLAGS(TestWPESettings -Wno-unused-parameter)
     endif ()
+
+    add_executable(TestWPEDisplay
+        ${TOOLS_DIR}/TestWebKitAPI/glib/WebKitGLib/TestMain.cpp
+        ${TOOLS_DIR}/TestWebKitAPI/Tests/WPEPlatform/TestDisplay.cpp
+    )
+    target_link_libraries(TestWPEDisplay
+        ${WebKitGLibAPITest_LIBRARIES}
+        WPEPlatform-${WPE_API_VERSION}
+    )
+    target_include_directories(TestWPEDisplay PRIVATE
+        ${WebKitGLibAPITests_INCLUDE_DIRECTORIES}
+        ${WPEPlatform_DERIVED_SOURCES_DIR}
+        ${WEBKIT_DIR}/WPEPlatform
+    )
+    target_compile_definitions(TestWPEDisplay PRIVATE ${WebKitGLibAPITests_DEFINITIONS})
+    set_target_properties(TestWPEDisplay PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestWebKitAPI/WPEPlatform)
+
+    WEBKIT_ADD_TARGET_CXX_FLAGS(TestWPEDisplay -Wno-unused-parameter)
 endif ()
 
 GLIB_COMPILE_RESOURCES(
