REGRESSION(289906@main): Broke Debug internal builds https://bugs.webkit.org/show_bug.cgi?id=287160 rdar://144307409
Unreviewed build fix.

* Source/WebKit/Configurations/_WebKit_SwiftUI.xcconfig:

Canonical link: https://commits.webkit.org/289940@main

--- a/Source/WebKit/Configurations/_WebKit_SwiftUI.xcconfig
+++ b/Source/WebKit/Configurations/_WebKit_SwiftUI.xcconfig
@@ -65,6 +65,6 @@ EXCLUDED_SOURCE_FILE_NAMES = $(EXCLUDED_SOURCE_FILE_NAMES_$(WK_ENABLE_SWIFTUI));
 EXCLUDED_SOURCE_FILE_NAMES_NO = *;
 
 // This file can be removed when all configurations build with WebKit's SwiftUI support.
-INCLUDED_SOURCE_FILE_NAMES = _WebKit_SwiftUI/Empty.swift;
+INCLUDED_SOURCE_FILE_NAMES = _WebKit_SwiftUI/Empty.swift WebKit.framework;
 
 INSTALLHDRS_SCRIPT_PHASE = YES;
